# SplitHoverEsc

./: Cargo.toml  README.md  openocd.cfg
mm32spin05x-pac/: Cargo.toml  device.x  lib.rs
mm32spin05x-pac/src/: _vectors.rs  adc.rs  comp.rs  crc.rs  device.rs  div.rs  dma1.rs  exti.rs  gpioa.rs  lib.rs  pwm.rs  pwr.rs  rcc.rs  spi1.rs  tim1.rs  tim14.rs  tim16.rs  uart1.rs  wwdg.rs
mm32spin05x-pac/src/adc/: cfgr.rs  ch10dr.rs  ch12dr.rs  cr.rs  dr.rs  regs.rs
mm32spin05x-pac/src/comp/: comp1_csr.rs  comp1_poll.rs  comp_crv.rs  regs.rs
mm32spin05x-pac/src/crc/: cr.rs  idr.rs
mm32spin05x-pac/src/dbg/: idcode.rs
mm32spin05x-pac/src/device/: regs.rs  uid1.rs  uid2.rs  uid3.rs  uid4.rs
mm32spin05x-pac/src/div/: cr.rs  dvsr.rs  quotr.rs  regs.rs  rmdr.rs
mm32spin05x-pac/src/dma1/: ccr1.rs  ccr2.rs  ccr3.rs  ccr4.rs  ccr5.rs  cmar1.rs  cmar5.rs  cndtr2.rs  cndtr4.rs  cndtr5.rs  ifcr.rs  isr.rs
mm32spin05x-pac/src/exti/: cfgr.rs  cr1.rs  emr.rs  ftsr.rs  imr.rs  pr.rs  regs.rs  rtsr.rs  swier.rs
mm32spin05x-pac/src/flash/: acr.rs  cr.rs  obr.rs
mm32spin05x-pac/src/gpioa/: afrh.rs  afrl.rs  brr.rs  crl.rs
mm32spin05x-pac/src/i2c1/: cr.rs  dr.rs  imr.rs  isr.rs  rawisr.rs  rd_req.rs  rx_over.rs  rx_under.rs  rxtlr.rs  sr.rs  sslr.rs  start.rs  stop.rs  tar.rs
mm32spin05x-pac/src/iwdg/: kr.rs  regs.rs
mm32spin05x-pac/src/pwm/: apmskr.rs  csr.rs  regs.rs
mm32spin05x-pac/src/pwr/: cr.rs  regs.rs
mm32spin05x-pac/src/rcc/: ahbenr.rs  ahbrstr.rs  apb2enr.rs  apb2rstr.rs  cfgr.rs  cir.rs  config.rs  cr.rs  csr.rs  regs.rs
mm32spin05x-pac/src/spi1/: cctl.rs  extctl.rs  gctl.rs  intstat.rs  nssr.rs  rxdnr.rs  rxreg.rs
mm32spin05x-pac/src/tim1/: ccer.rs  cr2.rs  dmar.rs  regs.rs  sr.rs
mm32spin05x-pac/src/tim14/: cr1.rs  egr.rs
mm32spin05x-pac/src/tim16/: bdtr.rs  ccmr1_input.rs  cnt.rs  rcr.rs  regs.rs
mm32spin05x-pac/src/tim2/: ccr1.rs  ccr4.rs
mm32spin05x-pac/src/tim3/: ccr2.rs  ccr4.rs  regs.rs
mm32spin05x-pac/src/uart1/: brr.rs  rxmask.rs
mm32spin05x-pac/src/wwdg/: cfgr.rs  regs.rs
mm32spin06x-pac/: Cargo.toml  MM32SPIN06x_s.svd  device.x
mm32spin06x-pac/src/: _vectors.rs  adc1.rs  bkp.rs  can.rs  comp.rs  crc.rs  csm.rs  dbg.rs  device.rs  dma1.rs  exti.rs  gpioa.rs  hwdiv.rs  i2c1.rs  iwdg.rs  lib.rs  pwr.rs  rcc.rs  rtc.rs  tim1.rs  tim16.rs  tim2.rs  uart1.rs  usb.rs
mm32spin06x-pac/src/adc1/: any_cfg.rs  any_cr.rs  cfgr.rs  chany0.rs  chany1.rs  chsr.rs  cmpr.rs  cr.rs  data.rs  dr0.rs  dr1.rs  dr14.rs  dr15.rs  dr2.rs  dr3.rs  dr4.rs  dr5.rs  dr6.rs  dr7.rs  dr8.rs  dr9.rs  regs.rs  sr.rs  sta_ext.rs
mm32spin06x-pac/src/bkp/: cr.rs  csr.rs  dr1.rs  dr12.rs  dr13.rs  dr15.rs  dr17.rs  dr19.rs  dr2.rs  dr20.rs  dr6.rs  dr8.rs  regs.rs  rtccr.rs
mm32spin06x-pac/src/can/: afm0.rs  afm1.rs  afm2.rs  alc_p.rs  btr0.rs  btr1.rs  cdr.rs  cmr_b.rs  cmr_p.rs  cr_b.rs  ecc_p.rs  ewlr_p.rs  fga0.rs  fga1.rs  fga2.rs  group0_acr0_p.rs  group0_acr1_p.rs  group0_acr2_p.rs  group0_acr3_p.rs  group0_acr_b.rs  group0_amr0_p.rs  group0_amr1_p.rs  group0_amr2_p.rs  group0_amr3_p.rs  group0_amr_b.rs  group10_acr0_p.rs  group10_acr1_p.rs  group10_acr2_p.rs  group10_acr3_p.rs  group10_acr_b.rs  group10_amr0_p.rs  group10_amr1_p.rs  group10_amr2_p.rs  group10_amr3_p.rs  group10_amr_b.rs  group11_acr0_p.rs  group11_acr1_p.rs  group11_acr2_p.rs  group11_acr3_p.rs  group11_acr_b.rs  (+206 more)
mm32spin06x-pac/src/comp/: comp1_csr.rs  comp1_poll.rs  comp2_csr.rs  comp2_poll.rs  comp_crv.rs  regs.rs
mm32spin06x-pac/src/crc/: ctrl.rs  regs.rs  reverse.rs
mm32spin06x-pac/src/csm/: bcnt.rs  cfg.rs  ctl1.rs  ctl2.rs  inten.rs  intstat.rs  regs.rs  rxreg1.rs  rxreg2.rs  spbrg.rs  txreg1.rs  txreg2.rs
mm32spin06x-pac/src/dbg/: cr.rs  idcode.rs  regs.rs
mm32spin06x-pac/src/device/: regs.rs  uid1.rs  uid2.rs  uid3.rs
mm32spin06x-pac/src/dma1/: dma_ccr1.rs  dma_cmar1.rs  dma_cndtr1.rs  dma_cpar1.rs  dma_ifcr.rs  dma_isr.rs  regs.rs
mm32spin06x-pac/src/exti/: cfgr.rs  cr1.rs  cr2.rs  cr3.rs  cr4.rs  emr.rs  ftsr.rs  imr.rs  padhys.rs  pr.rs  regs.rs  rtsr.rs  swier.rs
mm32spin06x-pac/src/flash/: acr.rs  ar.rs  obr.rs  optkeyr.rs  regs.rs
mm32spin06x-pac/src/gpioa/: afrh.rs  afrl.rs  brr.rs  bsrr.rs  crh.rs  crl.rs  dcr.rs  idr.rs  lckr.rs  odr.rs  regs.rs
mm32spin06x-pac/src/hwdiv/: cr.rs  dvdr.rs  dvsr.rs  quotr.rs  regs.rs  rmdr.rs  sr.rs
mm32spin06x-pac/src/i2c1/: cr.rs  dr.rs  fshr.rs  gc.rs  hold.rs  icr.rs  imr.rs  isr.rs  rawisr.rs  regs.rs  rx_done.rs  rxflr.rs  rxtlr.rs  (+8 more)
(+332 files in other folders)
