[package]
name = "split-hover-esc"
authors = ["rusttick <460036+rusttick@users.noreply.github.com>"]
edition = "2024"
version = "0.1.0"

# To run all the tests via `cargo test` the tests need to be explicitly disabled for the binary targets
# If you use a standard main.rs file the following is sufficient:
# [[bin]]
# name = "my-app"
# test = false

[[bin]]
name = "bitfield"
path = "src/bin/bitfield.rs"
test = false

[[bin]]
name = "format"
path = "src/bin/format.rs"
test = false

[[bin]]
name = "hello"
path = "src/bin/hello.rs"
test = false

[[bin]]
name = "hello2"
path = "src/bin/hello2.rs"
test = false

[[bin]]
name = "levels"
path = "src/bin/levels.rs"
test = false

[[bin]]
name = "overflow"
path = "src/bin/overflow.rs"
test = false

[[bin]]
name = "panic"
path = "src/bin/panic.rs"
test = false

[lib]
harness = false

# needed for each integration test
[[test]]
name = "integration"
harness = false

[dependencies]
embedded-hal = "0.2.7"
nb = "1"
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.1"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103", "medium"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
semihosting = "0.1.20"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
# default is opt-level = '0', but that makes very
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1

# cargo build/run --release
[profile.release]
# default is opt-level = '3', but that makes quite
# verbose machine code
opt-level = 's'
# trade compile speed for slightly better optimisations
codegen-units = 1
# Use Link Time Optimisations to further inline things across
# crates
lto = 'fat'
# Leave the debug symbols in (default is no debug info)
debug = 2
