[package]
name = "mm32spin05x-pac"
version = "0.1.0"
edition = "2024"

[dependencies]
bare-metal = "1.0.0"
vcell = "0.1.3"
cortex-m = "0.7.7"

[dependencies.cortex-m-rt]
optional = true
version ="0.7.5"

[dependencies.critical-section]
optional = true
version = "1.2.0"


[features]
rt = ["cortex-m-rt/device"]
