[package]
name = "mm32spin06x-pac"
version = "0.1.0"
edition = "2024"

[dependencies]
critical-section = { version = "1.2.0", optional = true }
cortex-m = "0.7.7"
cortex-m-rt = { version ="0.7.5", optional = true }
defmt = { version = "1.0.1", optional = true }
vcell = "0.1.3"

[features]
rt = ["cortex-m-rt/device"]
defmt = ["dep:defmt"]
